--- a/css/home/intro.css
+++ b/css/home/intro.css
@@ -11,7 +11,7 @@
   align-items: center;
   max-width: 1200px;
   margin: 0 auto;
-  max-height: 100vh;
+  width: 100%;
 }
 
 .introducao-conteudo {
@@ -30,7 +30,66 @@
 
 .introducao img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
   max-height: 100vh;
 }
+
+@media (max-width: 1200px) {
+  .introducao-conteudo h1 {
+    font-size: 4rem;
+  }
+  .introducao-conteudo p {
+    font-size: 1.5rem;
+  }
+  .main-introducao {
+    padding-bottom: 100px;
+  }
+}
+
+@media (max-width: 850px) {
+  .main-introducao {
+    padding: 20px 10px;
+    box-shadow: none;
+  }
+
+  .introducao {
+    grid-template-columns: 1fr;
+    padding-top: 40px;
+    gap: 32px;
+  }
+
+  .introducao img {
+    width: 100%;
+    max-height: 50vh;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 800px) {
+  .introducao {
+    text-align: center;
+  }
+  .introducao-conteudo h1 {
+    font-size: 3rem;
+  }
+
+  .introducao-conteudo p {
+    font-size: 1.5rem;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .introducao img {
+    width: 100%;
+    max-height: 30vh;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 700px) {
+  .introducao img {
+    display: none;
+  }
+}
+
