--- a/css/global/global.css
+++ b/css/global/global.css
@@ -2,6 +2,15 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+.container {
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding-left: 20;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 body,
 h1,
 h2,
