--- a/css/utility/components.css
+++ b/css/utility/components.css
@@ -13,3 +13,18 @@
 .button:hover {
   background: linear-gradient(#ffb60d, #e59317);
 }
+
+.link {
+  display: inline-block;
+  color: var(--cor-p1);
+  font: 500 1.5rem / 1.5 "Poppins", sans-serif;
+  text-transform: uppercase;
+}
+
+.link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: currentColor;
+}
