--- a/css/global/global.css
+++ b/css/global/global.css
@@ -17,7 +17,6 @@ h2,
 h3,
 h4,
 p,
-blockquote,
 a,
 ul,
 nav {
@@ -27,6 +26,10 @@ nav {
   font-size: 100%;
   font: inherit;
   box-sizing: border-box;
+}
+
+blockquote {
+  margin: 0;
 }
 
 img {
