--- a/css/utility/components.css
+++ b/css/utility/components.css
@@ -14,6 +14,15 @@
   background: linear-gradient(#ffb60d, #e59317);
 }
 
+.button.secundario {
+  background: var(--cor-10);
+  color: var(--cor-2);
+}
+
+.button.secundario:hover {
+  background: var(--cor-9);
+}
+
 .link {
   display: inline-block;
   color: var(--cor-p1);
