--- a/css/home/depoimento.css
+++ b/css/home/depoimento.css
@@ -42,3 +42,23 @@
 .depoimento p::after {
   content: "”";
 }
+
+@media (min-width: 1200px) {
+  .depoimento img {
+    max-height: 520px;
+  }
+}
+
+@media (max-width: 800px) {
+  .depoimento {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .depoimento img {
+    max-height: 200px;
+  }
+  .depoimento-conteudo {
+    padding: 40px 20px;
+    margin: auto;
+  }
+}
