--- a/css/home/intro.css
+++ b/css/home/intro.css
@@ -67,28 +67,23 @@
 }
 
 @media (max-width: 800px) {
+  .main-introducao {
+    background: var(--cor-12);
+    padding-top: 40px;
+    box-shadow: inset 0 -60px #ffffff;
+  }
   .introducao {
-    text-align: center;
+    grid-template-columns: 1fr;
+    gap: 32px;
   }
-  .introducao-conteudo h1 {
-    font-size: 3rem;
+  .introducao-conteudo {
+    padding-bottom: 0px;
   }
-
-  .introducao-conteudo p {
-    font-size: 1.5rem;
-    padding-left: 30px;
-    padding-right: 30px;
+  .introducao h1 {
+    margin-bottom: 16px;
   }
-
   .introducao img {
+    height: 300px;
     width: 100%;
-    max-height: 30vh;
-    margin: 0 auto;
-  }
-}
-
-@media (max-width: 700px) {
-  .introducao img {
-    display: none;
   }
 }
