--- a/css/utility/components.css
+++ b/css/utility/components.css
@@ -23,6 +23,35 @@
   background: var(--cor-9);
 }
 
+.button.seta {
+  display: flex;
+  align-items: center;
+  font-family: "Poppins";
+  font-size: 1.125rem;
+  font-weight: 600;
+}
+
+.button.seta::after {
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 10px;
+  margin-left: 12px;
+  background: url("../../img/icones/seta.svg");
+  transition: transform 0.2s;
+}
+
+.button.seta:hover::after {
+  transform: translateX(4px);
+}
+
+@media (max-width: 600px) {
+  .botao {
+    padding: 12px 16px;
+    font-size: 1rem;
+  }
+}
+
 .link {
   display: inline-block;
   color: var(--cor-p1);
