--- a/css/utility/components.css
+++ b/css/utility/components.css
@@ -26,7 +26,7 @@
 .button.seta {
   display: flex;
   align-items: center;
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   font-size: 1.125rem;
   font-weight: 600;
 }
