--- a/css/imports.css
+++ b/css/imports.css
@@ -18,8 +18,13 @@
 
 /* bicicletas */
 @import "./bicicletas/bicicletas.css";
+@import "./bicicletas/bicicleta.css";
+@import "./bicicletas/bicicletas-lista.css";
+@import "./bicicletas/seguro.css";
 
 /* seguros */
 @import "./seguros/seguros.css";
 @import "./seguros/perguntas.css";
 @import "./seguros/vantagens.css";
+
+/* tipos de bicicleta */
