--- a/css/utility/components.css
+++ b/css/utility/components.css
@@ -8,6 +8,7 @@
   text-decoration: none;
   display: inline-block;
   max-width: max-content;
+  font: 600 1.125rem/1.35 "Poppins", sans-serif;
 }
 
 .button:hover {
